# docker-simple-cpp-app

./: Dockerfile
backend/: CMakeLists.txt  app.cpp
